objects/P360_PA_PSR_Daily_Email_Notification__c.object
<CustomObject>
    <fields>
        <fullName>EmailID__c</fullName>
        <description>PA/PSR emailid</description>
        <label>EmailID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gadget_Language_Code__c</fullName>
        <description>Gadget Language Code for email links</description>
        <formula>Case(Recipient_Language__c,
"zh_CN","zh_CN",
"cz","cs_CZ",
"fr","fr_FR",
"de","de_DE",
"it","it_IT",
"ja","ja_JP",
"ko","ko_KR",
"pt_BR","pt_BR",
"ru","ru_RU",
"es","es_ES",
"th","th_TH",
"pl","pl_PL",
"tr","tr_TR",
"vi","vi_VN",
"fi","fi_FI",
"en_US")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gadget Language Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>PA/PSR Name</description>
        <label>Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewLeadCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>P360 PA/PSR Lead Count</description>
        <label>NewLeadCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewTargetProspectCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>P360 PA/PSR Target Prospect count</description>
        <label>NewTargetProspectCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_Leads_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of all overdue (aged) leads. A lead is considered overdue if it is 'partner assigned' or 'assigned to psr' status and is older than 4 days</description>
        <label>Overdue Leads Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recipient_Language__c</fullName>
        <description>FY14 Nov Release: To store Recipient language for email template</description>
        <label>Recipient Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores reference of the recipient who will receive this notification i.e., PA and PSR</description>
        <label>Recipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PA_PSR_EmailNotification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tobeTriggered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>tobeTriggered</label>
        <type>Checkbox</type>
    </fields>
    <description>PA/PSRs will get a summary email if they have new leads assigned.</description>
    <label>P360_PA_PSR_Daily_Email_Notification</label>
    <nameField>
        <displayFormat>EN-{0000000}</displayFormat>
        <label>EmailNotification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>P360_PA_PSR_Daily_Email_Notification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Recipient__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>tobeTriggered__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Modified_Yesterday</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Recipient__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>tobeTriggered__c</columns>
        <columns>NewLeadCount__c</columns>
        <columns>NewTargetProspectCount__c</columns>
        <columns>EmailID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Modified Yesterday</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>YESTERDAY</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Recipient__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>tobeTriggered__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>YESTERDAY</label>
        <language>en_US</language>
    </listViews>
</CustomObject>